# Quantitative-Finance

./: .gitignore  .travis.yml  ArrayMechanisms_8cc.html  ArrayMechanisms_8cc__dep__incl.map  ArrayMechanisms_8cc__dep__incl.md5  ArrayMechanisms_8cc__incl.map  ArrayMechanisms_8cc__incl.md5  ArrayMechanisms_8cc_source.html  ArrayMechanisms_8hh.html  ArrayMechanisms_8hh__dep__incl.map  ArrayMechanisms_8hh__dep__incl.md5  ArrayMechanisms_8hh__incl.map  ArrayMechanisms_8hh__incl.md5  ArrayMechanisms_8hh_source.html  ArrayStructure_8cc.html  ArrayStructure_8cc__dep__incl.map  ArrayStructure_8cc__dep__incl.md5  ArrayStructure_8cc__incl.map  ArrayStructure_8cc__incl.md5  ArrayStructure_8cc_source.html  ArrayStructure_8hh.html  ArrayStructure_8hh__dep__incl.map  ArrayStructure_8hh__dep__incl.md5  ArrayStructure_8hh__incl.map  ArrayStructure_8hh__incl.md5  ArrayStructure_8hh_source.html  Array_8cc.html  Array_8cc__dep__incl.map  Array_8cc__dep__incl.md5  Array_8cc__incl.map  Array_8cc__incl.md5  Array_8cc_source.html  Array_8hh.html  Array_8hh__dep__incl.map  Array_8hh__dep__incl.md5  Array_8hh__incl.map  Array_8hh__incl.md5  Array_8hh_source.html  AssocArray_8cc.html  AssocArray_8cc__dep__incl.map  (+1949 more)
src/chapter_10/: Array.cpp  Array.hpp  ArrayStructure.cpp  ArrayStructure.hpp  CMakeLists.txt  Complex.cpp  DatasimDate.cpp  FullArray.cpp  FullArray.hpp  Point.cpp  Point.hpp  TestGeneric.cpp  TestRangeSimple.cpp  TestSwap.cpp  range.cpp  range.hpp  testFunctionPointer  testFunctionPointer.cpp  testRange_no_compila.cpp
src/chapter_15/: BinomialMethod.hpp  CMakeLists.txt  PayoffNamespace.cpp  array.cpp  array.hpp  arraymechanisms.cpp  arraymechanisms.hpp  arraystructure.hpp  binomiallatticestrategy.cpp  binomialmethod.hpp  director.cpp  fullarray.cpp  fullarray.hpp  fullmatrix.cpp  fullmatrix.hpp  lattice.cpp  lattice.hpp  matrix.cpp  matrixmechanisms.hpp  matrixstructure.cpp  matrixstructure.hpp  numericmatrix.hpp  property.cpp  property.hpp  propertything.cpp  propertything.hpp  range.hpp  set.hpp  simplepropertyset.cpp  simplepropertyset.hpp  tensor.cpp  testBinomialMethod.cpp  vector.hpp
src/chapter_2/: CMakeLists.txt  DatasimDate.cpp  DatasimDate.hpp  GenericInequalities.cpp  GenericInequalities.hpp  Inequalities.cpp  Inequalities.hpp  Person.cpp  Person.hpp  TestConversions.cpp  TestGenericInequalities.cpp  TestInequalities.cpp  TestInequalities.txt  TestPerson  TestPerson.cpp  TestPerson.txt  chapter_2.ipynb
src/chapter_3/: CMakeLists.txt  EuropeanOption.cpp  EuropeanOption.hpp  SimpleBondPricing.cpp  SimpleBondPricing.hpp  TestEuropeanOption.cpp  TestEuropeanOption.txt  TestSimpleBondPricing.cpp  chapter_3.ipynb
src/chapter_6/: CMakeLists.txt  Complex.cpp  Complex.hpp  ComplexArray.cpp  ComplexArray.hpp  MandelbrotSet  MandelbrotSet.cpp  TestBoundsError  TestComplex  TestComplex.cpp  TestComplexArray  TestComplexArray.cpp  TestComplexArrayClass  TestComplexArrayClass.cpp  TestOptionStack  TestOptionStack.cpp
src/chapter_7/: CMakeLists.txt  DatasimDate.cpp  DatasimDate.hpp  DatesimDateTime.cpp  DatesimDateTime.hpp  NonlinearSolver.hpp  Person.cpp  Person.txt  PersonAndEmployee.hpp  TestAlias.cpp  TestImpliedVolatility  TestImpliedVolatility.cpp  TestNonlinearSolver  TestNonlinearSolver.cpp  TestPersonAndEmployee.cpp  TestPersonAndEmployee.txt  temporaltype.hpp  testAlliasNamespace  testAlliasNamespace.cpp  testNamespace.cpp
src/chapter_8/: BullSpreadPayoff.hpp  CMakeLists.txt  MultiAssetFactory.hpp  MultiAssetPayoff.cpp  MultiAssetPayoff.hpp  MultiAssetPayoffStrategy.hpp  OneFactorPayoff.hpp  Payoff.hpp  PayoffStrategy.hpp  Point.cpp  Point.hpp  Rectangle.cpp  TestMultiAsset  TestMultiAsset.cpp  TestOneFactorPayoff  TestOneFactorPayoff.cpp  TestPayoff  TestPayoff.cpp  TestRectangle  TestRectangle.cpp  VirtualDestructors  VirtualDestructors.cpp
src/chaptersixteen_solved/: BSImp.cpp  BSImp.hpp  CMakeLists.txt  EEulerIbvpSolver.cpp  ExcelDriver.cpp  ExcelDriver.hpp  ExcelImports.cpp  ExcelMechanisms.cpp  ExcelMechanisms.hpp  IEulerIbvpSolver.cpp  Instrument.hh  STDImp.cpp  STDImp.hpp  arraymechanisms.cpp  arraystructure.cpp  ibvp.cpp  mesher.hpp  tensor.hpp  testibvp.cpp  vector.cpp
study/: AssocMatrix.cc  AssocMatrix.hh  BackupEuropeanOption2.cc  BackupEuropeanOption2.hh  CMakeLists.txt  Doxyfile  MultiAssetPayoff.cc  MultiAssetPayoff.hh  TestMultiAsset.cc  mainpage.hh
study/docbook/: ArrayMechanisms_8cc.xml  ArrayMechanisms_8hh.xml  ArrayStructure_8cc.xml  ArrayStructure_8hh.xml  Array_8cc.xml  Array_8hh.xml  AssocArray_8cc.xml  AssocArray_8hh.xml  AssocMatrix_8cc.xml  AssocMatrix_8hh.xml  Association_8cc.xml  BSIBVPImp_8cc.xml  BSIBVPImp_8hh.xml  BackupEuropeanOption2_8cc.xml  BackupEuropeanOption2_8hh.xml  BinomialLatticeStrategy_8cc.xml  BinomialLatticeStrategy_8hh.xml  BinomialMethod_8cc.xml  BinomialMethod_8hh.xml  BullSpreadPayoff_8cc.xml  BullSpreadPayoff_8hh.xml  CMakeCXXCompilerId_8cpp.xml  CallPayoff_8cc.xml  CallPayoff_8hh.xml  ComplexArray_8cc.xml  ComplexArray_8hh.xml  Complex_8cc.xml  Complex_8hh.xml  DatasimDate_8cc.xml  DatasimDate_8hh.xml  DatasimException_8cc.xml  DatasimException_8hh.xml  DatesimDateTime_8cc.xml  DatesimDateTime_8hh.xml  Delegation_8cc.xml  EEulerIBVPSolver_8cc.xml  EEulerIBVPSolver_8hh.xml  EuropeanOptionFactory_8hh.xml  EuropeanOption_8cc.xml  EuropeanOption_8hh.xml  (+334 more)
study/html/: ArrayMechanisms_8cc.html  ArrayMechanisms_8cc_source.html  ArrayMechanisms_8hh.html  ArrayMechanisms_8hh_source.html  ArrayStructure_8cc.html  ArrayStructure_8cc_source.html  ArrayStructure_8hh.html  ArrayStructure_8hh_source.html  Array_8cc.html  Array_8cc_source.html  Array_8hh.html  Array_8hh_source.html  AssocArray_8cc.html  AssocArray_8cc_source.html  AssocArray_8hh.html  AssocArray_8hh_source.html  AssocMatrix_8cc.html  AssocMatrix_8cc_source.html  AssocMatrix_8hh.html  AssocMatrix_8hh_source.html  Association_8cc.html  Association_8cc_source.html  BSIBVPImp_8cc.html  BSIBVPImp_8cc_source.html  BSIBVPImp_8hh.html  BSIBVPImp_8hh_source.html  BackupEuropeanOption2_8cc.html  BackupEuropeanOption2_8cc_source.html  BackupEuropeanOption2_8hh.html  (+807 more)
(+2176 files in other folders)
