cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(finance)
add_executable(finance
	"director.cpp"
	"array.cpp"
	"lattice.cpp"
	"arraymechanisms.cpp"
	"arraystructure.cpp"
	"binomiallatticestrategy.cpp"
	"binomialmethod.cpp"
	"europeanoptionfactory.hpp"
	"fullarray.cpp"
	"fullmatrix.cpp"
	"latticemechanisms.cpp"
	"matrix.cpp"
	"matrixmechanisms.cpp"
	"matrixstructure.cpp"
	"numericmatrix.cpp"
	"option.hpp"
	"property.cpp"
	"propertything.cpp"
	"range.cpp"
	"set.cpp"
	"simplepropertyset.cpp"
	"tensor.cpp"
	"vector.cpp"
)