cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(finance)

add_executable(finance
	"testibvp.cpp"
	"array.cpp"
	"lattice.cpp"
	"arraymechanisms.cpp"
	"arraystructure.cpp"	
	"binomiallatticestrategy.cpp"
	"binomialmethod.cpp"
	"europeanoptionfactory.hpp"
	"fullarray.cpp"
	"fullmatrix.cpp"
	"OneFactorPayoff.cpp"
	"latticemechanisms.cpp"
	"matrix.cpp"
	"matrixmechanisms.cpp"
	"matrixstructure.cpp"
	"numericmatrix.cpp"
	"property.cpp"
	"propertything.cpp"
	"range.cpp"
	"set.cpp"
	"simplepropertyset.cpp"
	"tensor.cpp"
	"vector.cpp"
	"BSImp.cpp"
	"EEulerIbvpSolver.cpp"
	"IEulerIbvpSolver.cpp"
	"STDImp.cpp"
	"ibvp.cpp"
	"ibvpImp.cpp"
	"ibvpSolver.cpp"
	"Instrument.hh"
	#"ExcelDriver.cpp"
	#"ExcelMechanisms.cpp"
	"LUSolver.cpp"
	"mesher.cpp"
	"StringConversions.cpp"
	#"ExcelImports.cpp"
)
