add_executable(TestConversions TestConversions.cc)
add_executable(TestInequalities TestInequalities.cc)
add_executable(TestGenericInequalities TestGenericInequalities.cc)
add_executable(TestPerson TestPerson.cc)
message(STATUS "Chapter 2: TestPerson, TestInequalities, TestGenericInequalities and TestConversions.")
add_executable(TestEuropeanOption TestEuropeanOption.cc)
add_executable(TestSimpleBondPricing TestSimpleBondPricing.cc)
message(STATUS "Chapter 3: TestSimpleBondPricing and TestEuropeanOption.")
add_executable(TestPoint TestPoint.cc)
message(STATUS "Chapter 4: TestPoint.")
add_executable(TestComplex TestComplex.cc)
message(STATUS "Chapter 5: TestComplex.")
add_executable(MandelbrotSet MandelbrotSet.cc)
add_executable(TestBoundsError TestBoundsError.cc)
add_executable(TestComplexArray TestComplexArray.cc)
add_executable(TestOptionStack TestOptionStack.cc)
add_executable(TestComplexArrayClass TestComplexArrayClass.cc)
message(STATUS "Chapter 6: MandelbrotSet, TestBoundsError, TestComplexArray, TestOptionStack and TestComplexArrayClass.")
add_executable(TestAlias TestAlias.cc)
add_executable(TestAliasNamespace TestAliasNamespace.cc)
add_executable(TestImpliedVolatility TestImpliedVolatility.cc)
add_executable(TestNamespace TestNamespace.cc)
add_executable(TestNonlinearSolver TestNonlinearSolver.cc)
add_executable(TestPersonAndEmployee TestPersonAndEmployee.cc)
message(STATUS "Chapter 7: TestPersonAndEmployee, TestNonlinearSolver, TestNamespace, TestImpliedVolatility, TestAliasNamespace and TestAlias.")
add_executable(VirtualDestructors VirtualDestructors.cc)
add_executable(TestOneFactorPayoff TestOneFactorPayoff.cc)
add_executable(TestPayoff TestPayoff.cc)
add_executable(TestRectangle TestRectangle.cc)
add_executable(TestMultiAsset TestMultiAsset.cc)
message(STATUS "Chapter 8: VirtualDestructors, TestRectangle, TestPayoff, TestOneFactorPayoff and TestMultiAsset.")
add_executable(Example1 Example1.cc)
add_executable(Exception1 Exception1.cc)
add_executable(Exception2 Exception2.cc)
add_executable(TestOtherExceptions TestOtherExceptions.cc)
add_executable(TestExceptionSimple TestExceptionSimple.cc)
add_executable(TestSTLExceptions TestSTLExceptions.cc)
message(STATUS "Chapter 9: TestSTLExceptions, TestOtherExceptions, Exception1, Exception2, Example1 and TestExceptionSimple.")
add_executable(TestSwap TestSwap.cc)
add_executable(TestRangeSimple TestRangeSimple.cc)
add_executable(TestRange TestRange.cc)
add_executable(TestGeneric TestGeneric.cc)
add_executable(TestFunctionPointer TestFunctionPointer.cc)
message(STATUS "Chapter 10: TestSwap, TestRangeSimple, TestRange, TestGeneric and TestFunctionPointer.")
add_executable(HelloWorldAlmost HelloWorldAlmost.cc)
add_executable(testvalarray testvalarray.cc)
message(STATUS "Chapter 11: HelloWorldAlmost and testvalarray.")
add_executable(TestSparseMatrix TestSparseMatrix.cc)
add_executable(TestSetOperations TestSetOperations.cc)
add_executable(TestSetOperations2 TestSetOperations2.cc)
add_executable(TestSetGroup TestSetGroup.cc)
add_executable(TestSet1 TestSet1.cc)
add_executable(TestSet2 TestSet2.cc)
#add_executable(TestRanges TestRanges.cc)
add_executable(TestMap TestMap.cc)
add_executable(TestBasicMap TestBasicMap.cc)
#add_executable(TestAssocMatrix TestAssocMatrix.cc)
#add_executable(TestAssocArrayTypedef TestAssocArrayTypedef.cc)
add_executable(TestAssocArray TestAssocArray.cc)
add_executable(TestWrapper TestWrapper.cc)
#add_executable(TestPointerToMemberFunction TestPointerToMemberFunction.cc)
#add_executable(TestLatticeBasic TestLatticeBasic.cc)
add_executable(TestLattice TestLattice.cc)
add_executable(TestHeteroProperty TestHeteroProperty.cc)
add_executable(FunctionWrapper FunctionWrapper.cc)
add_executable(TestRelation TestRelation.cc)
add_executable(TestPSetCreators TestPSetCreators.cc)
add_executable(TestInterfaces TestInterfaces.cc)
#add_executable( .cc)
message(STATUS "Chapter 12: TestSparseMatrix, TestSetOperations, TestSetOperations2, TestSetGroup, Testset1, Testset2, TestRanges and .")

target_link_libraries(TestInequalities PRIVATE duffy)
target_link_libraries(TestGenericInequalities PRIVATE duffy)
target_link_libraries(TestPerson PRIVATE duffy)
target_link_libraries(TestEuropeanOption PRIVATE duffy)
target_link_libraries(TestSimpleBondPricing PRIVATE duffy)
target_link_libraries(TestPoint PRIVATE duffy)
target_link_libraries(TestComplex PRIVATE duffy)
target_link_libraries(MandelbrotSet PRIVATE duffy)
target_link_libraries(TestComplexArray PRIVATE duffy)
target_link_libraries(TestComplexArrayClass PRIVATE duffy)
target_link_libraries(TestImpliedVolatility PRIVATE duffy)
target_link_libraries(TestNonlinearSolver PRIVATE duffy)
target_link_libraries(TestPersonAndEmployee PRIVATE duffy)
target_link_libraries(TestOneFactorPayoff PRIVATE duffy)
target_link_libraries(TestPayoff PRIVATE duffy)
target_link_libraries(TestRectangle PRIVATE duffy)
target_link_libraries(TestMultiAsset PRIVATE duffy)
target_link_libraries(TestExceptionSimple PRIVATE duffy)
target_link_libraries(TestSwap PRIVATE duffy)
target_link_libraries(TestRangeSimple PRIVATE duffy)
target_link_libraries(TestRange PRIVATE duffy)
target_link_libraries(TestGeneric PRIVATE duffy)
target_link_libraries(TestFunctionPointer PRIVATE duffy)
target_link_libraries(TestSetOperations2 PRIVATE duffy)
target_link_libraries(TestSetGroup PRIVATE duffy)
target_link_libraries(TestSet2 PRIVATE duffy)
#target_link_libraries(TestRanges PRIVATE duffy)
#target_link_libraries(TestAssocMatrix PRIVATE duffy)
#target_link_libraries(TestAssocArrayTypedef PRIVATE duffy)
target_link_libraries(TestAssocArray PRIVATE duffy)
target_link_libraries(TestWrapper PRIVATE duffy)
#target_link_libraries(TestPointerToMemberFunction PRIVATE duffy)
#target_link_libraries(TestLatticeBasic PRIVATE duffy)
target_link_libraries(TestLattice PRIVATE duffy)
target_link_libraries(TestHeteroProperty PRIVATE duffy)
target_link_libraries(FunctionWrapper PRIVATE duffy)
target_link_libraries(TestRelation PRIVATE duffy)
target_link_libraries(TestPSetCreators PRIVATE duffy)
target_link_libraries(TestInterfaces PRIVATE duffy)
#target_link_libraries( PRIVATE duffy)